<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MakingRecipePhase">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/Remy_Menu_roundCardView"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="top|left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="48dp">

            <ImageButton
                android:id="@+id/Remy_Menu_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/remy" />
        </androidx.cardview.widget.CardView>


        <ImageView
            android:id="@+id/animation"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="105dp"
            android:src="@drawable/listening_only_mic_animation" />


        <Button
            android:id="@+id/returnToAppOpeningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/red_dark"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/to_app_opening"
            android:textSize="32sp" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/making_recipe_phase_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/returnToChecklistButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginBottom="0dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/making_recipe_to_ingredients_checklist"
                    android:textSize="23sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_weight=".6">

                <androidx.cardview.widget.CardView
                    android:id="@+id/roundCardView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="300dp">

                    <ImageView
                        android:id="@+id/bonAppetitImage"
                        android:layout_width="400dp"
                        android:layout_height="400dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bonappetitmsg" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/instructionTextview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"

                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"

                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold"

                    />

                <ToggleButton
                    android:id="@+id/StartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red_dark"
                    android:elevation="800dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="let's start"
                    android:textColor="@color/white"
                    android:textOff="let's start"

                    android:textOn="let's start"
                    android:textSize="50sp" />
            </FrameLayout>

            <!--            <LinearLayout-->
            <!--                android:id="@+id/error_textview_layout"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/errorMessage"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginBottom="10sp"-->
            <!--                    android:gravity="center"-->
            <!--                    android:padding="10sp"-->
            <!--                    android:text=""-->
            <!--                    android:textColor="@android:color/holo_red_dark"-->
            <!--                    android:textSize="18sp" />-->
            <!--            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/instructions_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/previousInstructionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/previous_instruction"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/RepeatInstructionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/repeat_instruction"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/NextInstructionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/next_instruction"
                    android:textSize="60sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>