<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCheckList">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/Remy_Menu_roundCardView"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="top|left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="48dp">

            <ImageButton
                android:id="@+id/Remy_Menu_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/remy" />
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/animation"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/listening_animation" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_show_check_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_show_check_list_recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/check_list_title"
                android:textColor="@color/black"
                android:textSize="37sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight=".7"
                android:choiceMode="multipleChoice"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_show_check_list_go_to_show_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ingredients_to_recipe"
                    android:textSize="40sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight=".1" />

                <Button
                    android:id="@+id/invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:text=""
                    android:textSize="40sp"
                    android:visibility="invisible" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight=".1" />

                <Button
                    android:id="@+id/button_show_check_list_go_to_making"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/red_dark"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/check_list_to_making_phase"
                    android:textSize="40sp" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

